# news_analysis

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
app/agent_runtime/: __init__.py  executor.py  messages.py  observation.py  planner.py  runner.py  state.py  workflow.py
app/agents/: __init__.py  base.py
app/api/: app.py  dependencies.py
app/bootstrap/: lifecycle.py  logging.py  settings.py
app/collectors/: __init__.py  arxiv.py  base.py  github.py  manager.py  registry.py  rss.py  setup.py  web.py
app/common/: enums.py  exceptions.py  hashing.py  ids.py
app/editorial/: __init__.py  cost_aware_pipeline.py  feed_service.py  hitl_service.py  insight_service.py  publish_service.py  report_service.py  topic_enrichment_pipeline.py  topic_service.py
app/embeddings/: __init__.py  indexing.py  provider.py  service.py
app/evaluation/: __init__.py  dataset.py  metrics.py  runner.py  schemas.py
app/frontend_contracts/: __init__.py  feed_view.py  report_view.py  search_view.py  topic_view.py  trend_view.py
app/llm/: __init__.py  client.py
app/memory/: __init__.py  service.py
app/monitoring/: __init__.py  cost.py  cost_policies.py
app/parsers/: __init__.py  base.py  html.py  json_parser.py  manager.py  registry.py  rss.py
app/processing/: __init__.py  cleaner.py  dedup.py  enrichment_pipeline.py  normalizer.py  pipeline.py
app/prompts/: __init__.py  registry.py
app/ranking/: __init__.py  feature_provider.py  features.py  service.py  tracing.py
app/scheduler/: __init__.py  config.py  manager.py  models.py  retry.py
app/scripts/: rebuild_timelines.py  rebuild_topic_snapshots.py
docs/: AgentRuntime顶层结构说明.md  Evaluation体系说明.md  Historian+Analyst工作流说明.md  HistorianAgent设计说明.md  Human-in-the-loop设计说明.md  HybridSearch策略说明.md  Ranking设计说明.md  Search设计说明.md  Subscription设计说明.md  Week10_Timeline与Retrieval说明.md  Week13-16多Agent编辑部与前端显化里程碑.md  Week17-20排序搜索订阅人工干预评估成本控制里程碑.md  Week1架构基线.md  Week9-12复杂记忆与历史分析里程碑.md  Week9复杂记忆系统基础说明.md  成本优化策略说明.md  排序策略说明.md  领域模型说明v1.md
scripts/: admin_merge_topics.py  admin_rerun_topic.py  cleanup_and_recollect.py  debug_ranking.py  debug_search.py  generate_daily_report.py  generate_weekly_report.py  rebuild_historical_context.py  reset_raw_items.py  run_eval.py  run_historian_for_topic.py  run_review_for_topic.py  run_topic_enrichment.py  run_writer_for_topic.py
(+255 files in other folders)
